# argus

./: .gitignore  README.md  dashboard.html  requirements.txt  tracker.py
blackhole/: CMakeLists.txt  blackhole.cpp  blackhole.frag  blackhole.h  metadata.json  plugin.cpp  resources.qrc
docs/superpowers/plans/: 2026-07-17-blackhole-effect.md
docs/superpowers/specs/: 2026-07-17-blackhole-effect-design.md
